[tool.poetry]
name = "example-python-flask"
version = "0.1.0"
description = ""
authors = ["Jon K Hellan <jon.kare.hellan@uninett.no>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-pyoidc = "3.7.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
